Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -500,6 +500,20 @@ Demostrar que $W$ es subespacio de $V$.
 \item Sea 
 	$$U=\{p(x) \in \mathbb{P}_2 : p(1) + p(0) = p(-1)\}$$
 	Determinar una base de $U$.
+\item Sea $A$ una matriz tal que $dim(Nul(A)) = 3$ y
+	$$A^T \begin{pmatrix}
+	1 \\ -2 \\ 1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}, \quad A^T \begin{pmatrix}
+	2 \\ -1 \\ -1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Determine las dimensiones de $Col(A)$, de $Fila(A)$ y de $Nul(A^T)$
+\item Determine, en los casos que sea posible, bases para los espacios $Nul(A^T)$ y $Fila(A)$.
+\end{enumerate}
 \item Sean $B = \begin{bmatrix} 1 & -1 \\ 0 & 0 \end{bmatrix}$ y $C = \{X \in M_2(\R)|BX=0\}$. Determine una base y la dimensión de $C$.
 \item Use vectores de coordenadas para probar la independencia lineal del conjunto de polinomios $\{1-2t^2-t^3,t+2t^3,1+t-2t^2\}$.
 \item Sean $p_1(t) = 1-t^2, p_2(t) = 1+t, p_3(t) = 1+t+t^2$. Se sabe que $\{p_1(t), p_2(t), p_3(t)\}$ es una base de $\mathbb{P}_2$.
