Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -614,5 +614,8 @@ Determine $T(t^2+1)$ y el espacio Nulo de $T$.
 	-1 & 1
 	\end{bmatrix}$
 	, determine su descomposición en valores singulares.
+\item Sea $A$ una matriz de $5 \times 3$ tal que existe una matriz $C$ de $3 \times 5$ tal que $CA = I_3$ y sea $b \in R^5$ tal que la ecuación $Ax = b$ tiene solución.\\
+Demuestra que $Ax = b$ tiene solución única.
+\item Sea $A$ y $B$ dos matrices de $m\times n$ y $n \times p$, respectivamente. Demuestre que si las columnas de $B$ son linealmente dependientes, entonces también lo son las columnas de $AB$.
 \end{preguntas}
 \end{document}
