--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -617,5 +617,48 @@ Determine $T(t^2+1)$ y el espacio Nulo de $T$.
 \item Sea $A$ una matriz de $5 \times 3$ tal que existe una matriz $C$ de $3 \times 5$ tal que $CA = I_3$ y sea $b \in R^5$ tal que la ecuación $Ax = b$ tiene solución.\\
 Demuestra que $Ax = b$ tiene solución única.
 \item Sea $A$ y $B$ dos matrices de $m\times n$ y $n \times p$, respectivamente. Demuestre que si las columnas de $B$ son linealmente dependientes, entonces también lo son las columnas de $AB$.
+\item Sea $T: \R^2 \ra \R^3$ la transformación lineal definida por
+	$$ T\left(\begin{bmatrix}
+	x_1\\
+	x_2
+	\end{bmatrix}\right) = \begin{bmatrix}
+	5x_1 - 3x_2\\
+	4x_1 -x_2\\
+	2x_1 +3x_2
+	\end{bmatrix}$$
+	encuentre $x = \begin{bmatrix}
+	x_1\\
+	x_2
+	\end{bmatrix}$ tal que $T(x) = \begin{bmatrix}
+	13\\
+	9\\
+	1
+	\end{bmatrix}$
+\item Determine todas las matrices $A$ tales que
+	$$ A\begin{bmatrix}
+	3\\
+	2
+	\end{bmatrix}=\begin{bmatrix}
+	2\\
+	1
+	\end{bmatrix}$$
+\item Determine condiciones sobre $\alpha$ y $\beta$ de modo que \\
+	$\begin{pmatrix}
+	\alpha-\beta\\
+	\alpha + \beta\\
+	2\alpha - \beta
+	\end{pmatrix}$ pertenezca a $Gen\left\{\begin{pmatrix}
+	-1\\
+	-1\\
+	1
+	\end{pmatrix}\, \begin{pmatrix}
+	1\\
+	2\\
+	1
+	\end{pmatrix}, \begin{pmatrix}
+	1\\
+	3\\
+	3
+	\end{pmatrix}\right\}$
 \end{preguntas}
 \end{document}
