Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -660,5 +660,13 @@ Demuestra que $Ax = b$ tiene solución única.
 	3\\
 	3
 	\end{pmatrix}\right\}$
+\item Determine si el siguiente sistema de ecuaciones posee solución única, infinitas soluciones o no tiene solución
+	$$
+	\begin{array}{rcr}
+	x+y-z& = & 1\\
+	3x+2y+z& = & 1\\
+	5x+3y+4z& = & 2\\
+	-2x -y +5z & = & 6
+	\end{array}$$
 \end{preguntas}
 \end{document}
