Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -668,5 +668,12 @@ Demuestra que $Ax = b$ tiene solución única.
 	5x+3y+4z& = & 2\\
 	-2x -y +5z & = & 6
 	\end{array}$$
+\item Describa todas las soluciones del siguiente sistema de ecuaciones y comparelas con las de su sistema homogeneo
+	$$
+	\begin{array}{rcr}
+	x_1 +2x_2-3x_3& = & 5\\
+	2x_1 + x_2 - 3x_3& = & 13\\
+	-x_1 + x_2 & = & -8
+	\end{array}$$
 \end{preguntas}
 \end{document}
