--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -4666,5 +4666,87 @@ Busquemos la forma escalonada de la matriz aumentada correspondiente al sistema
 		\right]$$
 		Podemos ver que la última linea equivale a $0 = -1$, por lo que el sistema es inconsistente, es decir, no tiene solución.
 \end{solucion}
+\item Describa todas las soluciones del siguiente sistema de ecuaciones y comparelas con las de su sistema homogeneo
+	$$
+	\begin{array}{rcr}
+	x_1 +2x_2-3x_3& = & 5\\
+	2x_1 + x_2 - 3x_3& = & 13\\
+	-x_1 + x_2 & = & -8
+	\end{array}$$
+\begin{solucion}
+La matriz aumentada asociada es
+		$$\left[
+		\begin{array}{ccc|c}
+		1 & 2 & -3 & 5\\
+		2 & 1 & -3 & 13\\
+		-1 & 1 & 0 & -8
+		\end{array}
+		\right] \sim \left[
+		\begin{array}{ccc|c}
+		1 & 2 & -3 & 5\\
+		0 & -3 & 3 & 3\\
+		0 & 3 & -3 & -3
+		\end{array}
+		\right] \sim \left[
+		\begin{array}{ccc|c}
+		1 & 2 & -3 & 5\\
+		0 & -3 & 3 & 3\\
+		0 & 0 & 0 & 0
+		\end{array}
+		\right]$$
+		$$ \sim \left[
+		\begin{array}{ccc|c}
+		1 & 2 & -3 & 5\\
+		0 & 1 & -1 & -1\\
+		0 & 0 & 0 & 0
+		\end{array}
+		\right]  \sim \left[
+		\begin{array}{ccc|c}
+		1 & 0 & -1 & 7\\
+		0 & 1 & -1 & -1\\
+		0 & 0 & 0 & 0
+		\end{array}
+		\right] $$
+		Esto corresponde al sistema
+		$$\begin{array}{rcl}
+		x_1 - x_3 & = & 7\\
+		x_2 - x_3 & = & -1\\
+		0 & = & 0
+		\end{array} \ra \begin{array}{rcl}
+		x_1 & = & x_3 + 7\\
+		x_2 & = & x_3 - 1\\
+		x_3 & = & x_3
+		\end{array} $$
+		Luego,
+		$$x = \begin{pmatrix}
+		x_3 + 7\\
+		x_3 - 1\\
+		x_3
+		\end{pmatrix} = \begin{pmatrix}
+		7\\
+		- 1\\
+		0
+		\end{pmatrix} + x_3 \begin{pmatrix}
+		1\\
+		1\\
+		1
+		\end{pmatrix}$$
+		Por último, la solución es
+		$$S = \begin{pmatrix}
+		7\\
+		- 1\\
+		0
+		\end{pmatrix} + Gen\left\{\begin{pmatrix}
+		1\\
+		1\\
+		1
+		\end{pmatrix}\right\}$$
+		Notemos que la solución del sistema homogeneo será lo mismo pero quitando el vector que no forma parte del generado, es decir
+		$$S_H = Gen\left\{\begin{pmatrix}
+		1\\
+		1\\
+		1
+		\end{pmatrix}\right\}$$
+\end{solucion}
 \end{preguntas}
 \end{document}
