--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -675,5 +675,70 @@ Demuestra que $Ax = b$ tiene solución única.
 	2x_1 + x_2 - 3x_3& = & 13\\
 	-x_1 + x_2 & = & -8
 	\end{array}$$
+\item En las siguientes matrices aumentadas, determinar los valores de $h$ para que el sistema sea consistente.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		1 & h & 4\\
+		3 & 6 & 8
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		-4 & 12 & h\\
+		2 & -6 & -3
+		\end{bmatrix}
+		$
+\end{tasks}
+\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		-4 & 2 & 1 &  0\\
+		2  & 1 & 2 & -1\\
+		-3 & 5 &-6& -2
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		2 & 1 & -3 & 0\\
+		1  & -2 & 0 & 12\\
+		4 & 2 &1& 8
+		\end{bmatrix}
+		$
+\end{tasks}
+\item Escribe los siguientes sistemas de ecuaciones en notación matricial.
+\begin{tasks}(2)
+\task $
+		\begin{array}{rcr}
+		x_1 -x_2 + 3x_3 & = & 2\\
+		3x_2 - 2x_3 & = & 0\\
+		4x_1 +2x_2 & = & -1
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		3x_1 & = & 1\\
+		x_1-x_2& = & 3\\
+		-2x_1+x_2 & = & -8\\
+		x_2 & = & 0
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		2x_2 -x_3 +2x_4& = & 5\\
+		x_1+x_2 - x_3 & = & 2\\
+		-4x_1 +x_3-x_4& = & -4
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		x_1 +x_2-3x_3& = & 0\\
+		x_2+4x_4& = & -1\\
+		x_1-2x_2+x_3-5x_4 & = & 2\\
+		x_3-x_4 & = & 5
+		\end{array}
+		$
+\end{tasks}
 \end{preguntas}
 \end{document}
