--- a/2019/2/MAT1620/3.5/enunciado.tex
+++ b/2019/2/MAT1620/3.5/enunciado.tex
@@ -115,5 +115,57 @@
 \end{center}
 
 \begin{preguntas}
+\item Determinar si las siguientes integrales impropias convergen o divergen y calcularlas en caso de que converjan.
+\begin{tasks}(3)
+\task $\displaystyle\int_{0}^{3}\dfrac{1}{x\ \sqrt[]{x}}dx$
+\task $\displaystyle\int_{e}^{\infty}\dfrac{1}{xlnx}dx$
+\task $\displaystyle\int_{0}^{\infty}\dfrac{1}{\sqrt[]{x}(1+x)}dx$
+\end{tasks}
+\item La Trompeta de Torricelli se consigue al rotar la curva $y=\dfrac{1}{x},\ x \geq 1$ en torno al eje $x$.
+\begin{enumerate}[a)]
+\item Calcular la superficie de la trompeta entre $1$ y $L$ con la siguiente formula:
+		$$ S = 2\pi \displaystyle\int_{1}^{L} f(x)\ \sqrt[]{1+[f'(x)]^2}dx, \quad con\ L \ra \infty $$
+\item Calcular el volumen de la trompeta entre $1$ y $L$ con la siguiente formula:
+		$$ V = \pi \displaystyle\int_{1}^{L} f(x)^2dx, \quad con\ L \ra \infty$$
+\end{enumerate}
+\item Determinar el valor de la constante $C$ para la cual la integral
+	$$\displaystyle\int_{0}^{\infty} \left( \dfrac{x}{x^2+1} - \dfrac{C}{3x+1}\right)dx$$
+	converge. Evalúe la integral para este valor de $C$.
+\item Estudiar la convergencia de la siguiente integral
+$$\displaystyle\int_{0}^{\infty} e^{-x} \dfrac{sen^2(x)}{x^{5/2}}dx$$
+\item Calcule el límite de las siguientes sucesiónes
+\begin{tasks}(2)
+\task $a_n = \dfrac{3^n+7}{5^n-3}$
+\task $a_n = \dfrac{n^3-n}{7n^3+6}$
+\task $a_n = \dfrac{(-1)^n n}{n^3+4}$
+\task $a_n=\ln(n+1)-\ln(n)$
+\end{tasks}
+\item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
+\begin{tasks}(2)
+\task $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$
+\task $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{tasks}
+\item Sea $a_n = \dfrac{n!}{n^n}$, calcular $\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$
+\item La sucesión $\{a_n\}$ se define con 
+		$$a_1=1\quad y\quad a_{n+1} = 3-\dfrac{1}{a_n},\ \forall n\geq 1$$\\
+Se sabe que $\{a_n\}$ es monótona creciente. Prueba que $\{a_n\}$ es convergente y calcule su límite.
+\item Determine si las siguientes series convergen o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$
+\task $\sum\limits_{n=1}^{\infty}\left(sen\left(\dfrac{n\pi}{2}\right)\right)^2$
+\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-3n}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{1 + n + \sin(n)}{3n^4 + \ln(n)}$
+\task $\sum\limits_{n=20}^{\infty}\dfrac{1}{nln(n)ln(ln(n))}$
+\task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
+\end{tasks}
+\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
+\item Sea $a_n$ una sucesión tal que $a_n \neq 0,\ \forall n \in \N$.\\
+	Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ converge, entonces $\sum\limits_{n=1}^{\infty}\dfrac{1}{a_n}$ diverge.
+\item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
+	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
+	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
+\item Considere la representación decimal de un número,
+$$0,d_1d_2d_3... = \dfrac{d_1}{10} + \dfrac{d_2}{10^2} + \dfrac{d_3}{10^3}$$
+donde $d_i$ es alguno de los dígitos entre 0 y 9. Pruebe que la serie anterior es convergente.
 \end{preguntas}
 \end{document}
